@@ -4,6 +4,9 @@
 	* support/regression/fwk/lib/extern2.c: removed inline for NetBSD builds
 	* src/SDCCast.c(decorateType): fixed bug 3117721
 	* support/regression/tests/bug3117721.c: new, added
+	* support/regression/ports/hc08/spec.mk: removed accidently added libs
+	* src/SDCCsymt.c(processFuncArgs): fixed bug 1932626
+	* support/regression/tests/bug1932626.c: new, added
 
 2011-05-12 Maarten Brock <sourceforge.brock AT dse.nl>
 
